# frontendpracticemonorepo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel
.github/workflows/: main.yaml
backend/account-service/: BUILD.bazel
backend/account-service/src/main/java/com/app/application/: BUILD.bazel
backend/account-service/src/main/java/com/app/presentation/: BUILD.bazel  HelloControllerTest.java
backend/account-service/src/main/java/com/app/start/: Application.java  ApplicationTest.java  BUILD.bazel
backend/src/main/java/com/app/application/: BUILD.bazel  HelloService.java
backend/src/main/java/com/app/presentation/: BUILD.bazel  HelloController.java
backend/src/main/java/com/app/start/: BUILD.bazel
backend/src/main/java/com/example/demo/: BUILD.bazel  HelloController.java
backend/src/test/java/com/example/demo/: BUILD.bazel  DemoApplicationTests.java
bazel-out/: stable-status.txt  volatile-status.txt
bzlrules/: write_digest_from_oci.bzl
frontend/: .gitignore  BUILD.bazel  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: BUILD.bazel  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/utils/api/dataContract/: DataContract.ts  DataContractTypes.ts
frontend/src/app/utils/api/httpClient/: BUILD.bazel  HTTPClient.test.ts  HTTPClient.ts  IHTTPClientTypes.ts
myapp/: package-lock.json  package.json
