load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//js:defs.bzl", "js_run_binary", "js_run_devserver")

npm_link_all_packages(
    name = "node_modules"
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

js_library(
    name = "packagejson",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)

js_run_devserver(
    name = "dev",
    args = ["dev"],
    command = "./node_modules/.bin/next",
    chdir = "frontend",
    data = [
        "next.config.js",
        "//frontend:node_modules/next",
        "//frontend:node_modules/react",
        "//frontend:node_modules/react-dom",
        "//frontend:node_modules/typescript",
        "//frontend/src/app:pages",
        "//frontend/src/app:styles",
        "//frontend/public:public",

    ],
)

js_library(
    name = "jestconfig",
    srcs = ["jest.config.js"],
    visibility = ["//visibility:public"],
)

