load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_js//js:defs.bzl", "js_library")

SRCS = [
    "layout.tsx",
    "page.tsx"
]

SPECS = [
    "page.test.tsx",
]

ts_project(
    name = "pages",
    srcs = SRCS,
    declaration = True,
    resolve_json_module = True,
    allow_js = True,
    preserve_jsx = True,
    tsconfig = "//frontend:tsconfig",
    deps = [
        "//frontend:node_modules/@types/react",
        "//frontend:node_modules/@types/react-dom",
        "//frontend:node_modules/next",
    ],
     visibility = ["//visibility:public"]
)

ts_project(
    name = "specs",
    srcs = SPECS,
    declaration = True,
    resolve_json_module = True,
    allow_js = True,
    preserve_jsx = True,
    tsconfig = "//frontend:tsconfig",
    deps = [
        ":pages",
        "//frontend:node_modules/@testing-library/react",
        "//frontend:node_modules/@types/jest",
        "//frontend:node_modules/@testing-library/jest-dom",
    ],
)

jest_test(
    name = "jest_test",
    config = "//frontend:jestconfig",
    data = [
        ":specs",
        "//frontend:node_modules",
        "//frontend:packagejson"
    ],
    node_modules = "//frontend:node_modules",
    tags = ["jest"],
)

js_library(
    name = "styles",
    srcs = ["globals.css", "page.module.css"],
    visibility = ["//visibility:public"]
)

