load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test")

java_junit5_test(
    name = "DemoApplicationTests",
    size = "small",
    srcs = glob(["*.java"]),
    deps = [
        "//backend/src/main/java/com/example/demo:demo",
        "@maven//:org_springframework_boot_spring_boot_test",
        "@maven//:org_springframework_spring_test",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting"

    ]
)