java_library(
    name = "application",
    srcs = glob(["*.java"]),
    visibility = ["//backend/account-service:__subpackages__"],
    deps = [
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_context"
    ],
)