load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test")

java_library(
    name = "start",
    srcs = ["Application.java"],
    visibility = ["//backend/account-service/src:__subpackages__"],
    deps = [
        "//backend/account-service/src/main/java/com/app/presentation:presentation",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_context"
    ],
)

java_junit5_test(
    name = "ApplicationTest",
    size = "small",
    srcs = glob(["ApplicationTest.java"]),
    deps = [
        ":start",
        "@maven//:org_springframework_boot_spring_boot_test",
        "@maven//:org_springframework_spring_test",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting"

    ]
)

java_binary(
    name = "account-service-bin",
    main_class = "com.app.start.Application",
    runtime_deps = [
        ":start",
    ],
    visibility = ["//backend/account-service:__subpackages__"]
)

load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test")

